kubernetes/reddit/ui-ingress3.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress3
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 tls:
  - hosts:
      - ingress.vlab101.net
    secretName: ui-ingress
 rules:
   - host: ingress.vlab101.net
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui
              port:
                number: 9292
 ingressClassName: nginx
